updating the pages

--- a/pages/style/colorStyle.css
+++ b/pages/style/colorStyle.css
@@ -24,7 +24,7 @@
     --black: #000;
 
     --green1: #A8E1A3;
-    --green2: #749671;
+    --green2: rgb(116, 150, 113);
     --green3: #6A8C74;
     --green4: #415643;
     --green5: #324634;
