--- a/pages/style/taskStyle.css
+++ b/pages/style/taskStyle.css
@@ -12,17 +12,19 @@
     
 } */
 
-body{
-
+.main-content{
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 1rem;
 }
 
 /* GRAPHICS */
 
-.graphics{
+#graphics{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,16 +38,49 @@ body{
 }
 
 h1{
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    /* color: var(--secondary-color); */
     text-decoration: none;
     margin-block: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+#chartSelector{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding-inline: 1em;
+    padding-block: 0.5em;
+    font-family: 'Poppins', sans-serif;
+}
+
+#codeSelector{
+    margin-block: 1rem;
+    display: grid;
+    gap : 2em;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    grid-auto-rows: auto;
+    width: 100%;
+    
 
 }
+
+#codeSelector>button{
+    padding-inline: 1em;
+    padding-block: 0.5em;
+    font-family: 'Poppins', sans-serif;
+    color: var(--font-color);
+    background-color: var(--quaternary-color);
+}
+
+#code-menu{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
 
 
 #code{
@@ -54,13 +89,52 @@ h1{
     gap: 16px;
     font-size: clamp(6px, 1.5vw, 12px);
 }
-#code>div{
+#code>code{
     display: none;
     background-color: var(--secondary-color);
     border-radius: 10px;
     padding: 16px;
     box-shadow: 0 0 5px var(--box-shadow-color);
     color: var(--primary-color);
+}
+
+#compare-tool{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+}
+
+#head_elements{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+}
+
+details{
+    border-radius: 10px;
+    padding: 16px;
+    box-shadow: 0 0 5px var(--box-shadow-color);
+    margin-block: 1rem;
+    margin-right: 1em;
+    background-color: var(--quinary-color);
+}
+
+details>div{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin-block: 1rem;
+}
+
+summary{
+    width: 10em;
+    align-self: center;
+    cursor: pointer;
+    font-weight: bold;
 }
 
 /* DEBUG TOOLS */
@@ -71,11 +145,4 @@ h1{
     padding: 16px;
     box-shadow: 0 0 5px var(--black);
 }  */
-
-#compare-tool{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
-}
 
