--- a/pages/style/indexStyle.css
+++ b/pages/style/indexStyle.css
@@ -50,8 +50,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    text-align: center;
     
-    
+}
+
+#machine_info{
+    text-align: left;
 }
 
 /* BEST TASK GLOBALY SECTION */
@@ -103,6 +107,11 @@
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
+#theme-rank .rank-arrow svg{
+    width: 100px;
+    height: 30px;
+}
+
 .theme-card{
     background-color: var(--quaternary-color);
     border-radius: 10px;
@@ -147,6 +156,11 @@
 
 #task-rank .grid{
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+}
+
+#task-rank .rank-arrow svg{
+    width: 100%;
+    height: 30px;
 }
 
 .task-card{
