--- a/pages/style/taskStyle.css
+++ b/pages/style/taskStyle.css
@@ -54,6 +54,10 @@ h1{
     padding-inline: 1em;
     padding-block: 0.5em;
     font-family: 'Poppins', sans-serif;
+    background-color: aliceblue;
+    border-radius: 10px;
+    border: 1px solid var(--primary-color);
+    font-size: large;
 }
 
 #codeSelector{
@@ -87,8 +91,7 @@ h1{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 16px;
-    font-size: 0.8vw;
-    /* font-size: 0.5rem; */
+    font-size: 11px;
 }
 #code>code{
     display: none;
@@ -103,7 +106,7 @@ h1{
 
 @media screen and (max-width: 1300px){
     #code{
-        font-size: 0.6vw;
+        font-size: 10px;
     }
 }
     
