--- a/pages/style/taskStyle.css
+++ b/pages/style/taskStyle.css
@@ -46,6 +46,11 @@ h1{
     flex-direction: column;
     align-items: center;
 }
+
+p{
+    margin: 0;
+}
+
 #chartSelector{
     display: flex;
     flex-direction: row;
